# trust-region-irl

./: .gitignore  README.md  install.sh  pyproject.toml
docs/: install.md
experiments/: experiment.py  run_experiment.sh
trust_region_irl/algorithms/: data_utils.py
trust_region_irl/algorithms/airl_ppo/flax_full_jit/: __init__.py  airl_ppo.py  default_config.py  discriminator.py
trust_region_irl/algorithms/airl_ppo/flax_loco_mjx/: __init__.py  airl_ppo.py  default_config.py
trust_region_irl/algorithms/ppo_retraining/: ppo_retraining.py
trust_region_irl/environments/: view_mujoco.py
trust_region_irl/environments/ant_disabled_mjx/: __init__.py  create_env.py  environment.py
trust_region_irl/environments/ant_mjx/: __init__.py  create_env.py  environment.py
trust_region_irl/environments/half_cheetah_mjx/: __init__.py  create_env.py  environment.py
trust_region_irl/environments/hopper_mjx/: __init__.py  create_env.py  environment.py
trust_region_irl/environments/humanoid_mjx/: __init__.py  create_env.py  environment.py
trust_region_irl/environments/loco_mjx/: __init__.py  base_algorithm.py  create_env.py  default_config.py  locomujoco_override.py
trust_region_irl/environments/point_maze_mjx/: __init__.py  create_env.py  environment.py
trust_region_irl/environments/pusht_mjx/: __init__.py  create_env.py  default_config.py  environment.py
trust_region_irl/environments/walker2d_mjx/: __init__.py  create_env.py  environment.py
trust_region_irl_discrete/: config.yaml  experiment.py  gridworld.py  irl.py  plot.py  solver.py  trajectory.py
(+72 files in other folders)
