[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trust-region-irl"
version = "0.0.1"
description = "Trust Region Inverse Reinforcement Learning: Explicit Dual Ascent using Local Policy Updates"
authors = [{name = "Anish Diwan", email = "anish.diwan@robot-learning.de"}]
license = {text = "MIT License"}
readme = "README.md"
dependencies = [
    "rl_x>=0.0.1",
    "tensorflow_probability>=0.25.0",
]

[project.urls]
repository = "https://github.com/anishhdiwan/trust-region-irl/"

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["trust_region_irl"]
